fix spacing

--- a/app/less/_common.less
+++ b/app/less/_common.less
@@ -133,7 +133,7 @@ h1 {
 
         .parallax-window {
           /* Set a specific height */
-          height: 200px;
+          height: 300px;
           /* Create the parallax scrolling effect */
           background-attachment: fixed;
           background-position: center;
