--- a/app/less/engagement.less
+++ b/app/less/engagement.less
@@ -1,6 +1,6 @@
 #engagement {
       background-color: #ffffff;
-      min-height: 700px;
+      min-height: 730px;
       .header-window {
         @media @mobile-device{ img { top: -100px; }  }
       }
@@ -10,6 +10,7 @@
         width: 75%;
         margin: 0 auto;
         padding-bottom: 150px;
+        //.panel-group { margin-bottom: 150px;}
         .mobile-model-img { display: none; }
         .model-img { display: block; &#IM, &#BM { width: 70%; }}
         @media @mobile-device{
